--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body><h1>Evio's official webpage</h1></body>
+  <body>
+    <h1>Evio's official webpage</h1>
+    <p>Palawan State University</p>
+  </body>
 </html>
